<resources>
    <string name="app_name">Parking Control</string>

    <string name="IP_LOCAL">10.245.1.9</string>
    <integer name="PORT_TCP">3001</integer>
    <integer name="PORT_HTTP">8000</integer>




    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>

    <string name="user_1">John Snow</string>
    <string name="user_2">Sansa Stark</string>
    <string name="user_3">Arya Stark</string>

    <string name="car_1">Renault Megane</string>
    <string name="car_2">Citroën CXperience</string>
    <string name="car_3">Rocket car</string>

    <string name="car_1_specs">Autonomy : 750 km \nFuel Level :  90% \nKilometrage : 13 865 km</string>
    <string name="car_2_specs">Autonomy : 350 km \nFuel Level :  45% \nKilometrage : 34 582 km</string>
    <string name="car_3_specs">Autonomy : 500 km \nFuel Level :  100% \nKilometrage : 1 564 km</string>

</resources>
