<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_marginTop="7dp"
        android:id="@+id/userCar1"
        android:layout_below="@+id/viewLine1"
        android:layout_width="match_parent"
        android:background="@color/colorBackgroundModeSelected"
        android:padding="7dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/car_1"
            android:adjustViewBounds="true"
            android:background="@drawable/background_person"
            android:maxWidth="130dp"
            android:maxHeight="130dp"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:layout_marginLeft="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/car_1"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/car_1_specs"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/userCar2"
        android:layout_below="@+id/userCar1"
        android:layout_width="match_parent"
        android:padding="7dp"
        android:background="@color/colorBackgroundUnselected"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/background_person"
            android:maxHeight="130dp"
            android:maxWidth="130dp"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/car_2" />

        <LinearLayout
            android:layout_marginLeft="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/car_2"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/car_2_specs"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/userCar3"
        android:layout_below="@+id/userCar2"
        android:layout_width="match_parent"
        android:padding="7dp"
        android:background="@color/colorBackgroundUnselected"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/car_3"
            android:adjustViewBounds="true"
            android:background="@drawable/background_person"
            android:maxWidth="130dp"
            android:maxHeight="130dp"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:layout_marginLeft="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/car_3"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/car_3_specs"/>

        </LinearLayout>

    </LinearLayout>



    <ImageView
        android:id="@+id/imgValide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/validate_icon"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:scaleType="fitCenter"/>


</RelativeLayout>